--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,15 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
+
+
+
 .blocFonc {
     display: flex;
     border-radius: 15px;
