--- a/style.css
+++ b/style.css
@@ -1,19 +1,172 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+header {
+  box-shadow: ;
+}
+
+/* indenté dans header */
+
+.logo {
+  text-align: center;
+  padding: 20px;
+}
+
+/* indenté dans logo */
+
+.logo img {
+  width: 50%;
+}
+
+.accroche input {
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  font-weight: 600;
+  font-size: 18px;
+  background-color: lightgrey;
+}
+
+::placeholder {
+  color: black;
+}
+
+.zone {
+  display: flex;
+}
+
+.zone i {
+  font-size: 18px;
+}
+
+.accroche {
+  padding: 20px;
+  text-align: center;
+  background-color: rgb(219, 217, 217);
+}
+
+.accrocheText h1, .accrocheText p, .accrocheText button {
+  margin: 20px;
+}
+
+.accrocheText button {
+  border-radius: 50px;
+  padding: 10px;
+  width: 50%;
+  border: none;
+  background-color: purple;
+  color: white;
+}
+
+.fonctionnement h2 {
+  margin: 20px;
+}
+
 .blocFonc {
   display: flex;
   border-radius: 15px;
+  padding: 20px;
+  padding-bottom: 15px;
+  margin: 20px;
+  width: 90%;
+  border: none;
+  box-shadow: ;
+}
+
+.blocFonc h3 {
+  width: 100%;
+  text-align: center;
+}
+
+.blocFonc p {
+  position: relative;
+  left: -30px;
+  width: 17px;
+  padding: 5px;
+  color: white;
+  border-radius: 50px;
+  background-color: purple;
+}
+
+.blocFonc i {
+  margin-right: 30px;
+  font-size: 20px;
+}
+
+.restaurants {
+  background-color: lightgrey;
+}
+.cards {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.cardResto {
+  width: 90%;
+  margin: 20px;
+  background-color: white;
+  border-radius: 15px;
+}
+
+.cardResto .info {
+  padding: 15px;
+}
+
+.cardResto span {
+  position: absolute;
+  right: 30px;
+  margin-top: 10px;
+  background-color: green;
+  padding: 10px;
 }
 
 img {
-  max-height: 100px;
+  width: 100%;
+  max-height: 210px;
+  border-radius: 15px 15px 0 0;
 }
 
 .info {
   display: flex;
 }
 
-.coeurResto i {
-  position: relative;
-  top: 50px;
+footer {
+  height: 100%;
+  padding: 10px;
+  background-color: rgb(49, 47, 47);
+  color: white;
 }
+
+footer h2 {
+  margin: 10px;
+}
+
+footer nav a {
+  color: white;
+  text-decoration: none;
+  margin: 5px;
+}
+
+footer nav {
+  display: flex;
+  flex-direction: column;
+}
+
+.fa-utensils:before {
+  margin-right: 17px;
+}
+
+.fa-hands-helping:before {
+  margin-right: 10px;
+}
+
+
 
 /*# sourceMappingURL=style.css.map */
