--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+:root {
+  --prim-color: #9356DC;
+  --second-color: #FF79DA;
+  --ter-color: #99E2D0;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -7,22 +13,54 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-header {
-  box-shadow: ;
-}
+/* Header */
 
-/* indenté dans header */
+header {
+  box-shadow: 0px 0px 4px rgb(0, 0, 0,.5);
+  position: relative;
+  z-index: 1;
+}
 
 .logo {
   text-align: center;
   padding: 20px;
 }
 
-/* indenté dans logo */
-
 .logo img {
   width: 50%;
 }
+
+/* Zone recherche */ 
+
+::placeholder {
+  color: black;
+  font-size: 18px;
+}
+
+.zone {
+  display: flex;
+  align-items: center;
+  height: 60px;
+  background-color: #e6e3e3;
+  position: relative;
+}
+
+.zoneRech {
+  margin-left: 35%;
+}
+
+.zone i {
+  font-size: 18px;
+  padding-right: 20px;
+}
+
+.zone input {
+  background-color: #e6e3e3;
+  border: none;
+  height: 60px;
+}
+
+/* Accroche */
 
 .accroche input {
   width: 100%;
@@ -33,39 +71,42 @@ header {
   background-color: lightgrey;
 }
 
-::placeholder {
-  color: black;
-}
-
-.zone {
-  display: flex;
-}
-
-.zone i {
-  font-size: 18px;
-}
-
 .accroche {
-  padding: 20px;
+  padding: 30px;
   text-align: center;
-  background-color: rgb(219, 217, 217);
+  background-color: rgb(243, 241, 241);
 }
 
 .accrocheText h1, .accrocheText p, .accrocheText button {
   margin: 20px;
 }
 
-.accrocheText button {
-  border-radius: 50px;
-  padding: 10px;
-  width: 50%;
-  border: none;
-  background-color: purple;
-  color: white;
+.accroche p {
+  font-size: 20px;
+  color: grey;
 }
 
+.accroche h1 {
+  font-size: 30px;
+}
+
+.accrocheText button {
+  background: linear-gradient(var(--second-color), var(--prim-color));
+  border-radius: 50px;
+  font-size: 18px;
+  font-weight: 600;
+  padding: 15px;
+  width: 50%;
+  border: none;
+  color: white;
+  min-width: 250px;
+}
+
+/* Fonctionnement */
+
 .fonctionnement h2 {
-  margin: 20px;
+  margin: 30px;
+  margin-top: 50px;
 }
 
 .blocFonc {
@@ -73,10 +114,10 @@ header {
   border-radius: 15px;
   padding: 20px;
   padding-bottom: 15px;
-  margin: 20px;
+  margin: 35px;
   width: 90%;
   border: none;
-  box-shadow: ;
+  box-shadow: 0px 0px 4px rgb(0, 0, 0,.5);
 }
 
 .blocFonc h3 {
@@ -91,7 +132,7 @@ header {
   padding: 5px;
   color: white;
   border-radius: 50px;
-  background-color: purple;
+  background-color: var(--prim-color);
 }
 
 .blocFonc i {
@@ -99,9 +140,18 @@ header {
   font-size: 20px;
 }
 
+/* Restaurants */
+
 .restaurants {
-  background-color: lightgrey;
+  background-color: rgb(243, 241, 241);
 }
+
+.restaurants h2 {
+  margin: 20px;
+  margin-bottom: 0; /* améliorer les margin avec une valeur*/
+  margin-top: 50px;
+}
+
 .cards {
   display: flex;
   flex-direction: column;
@@ -121,10 +171,12 @@ header {
 
 .cardResto span {
   position: absolute;
-  right: 30px;
-  margin-top: 10px;
-  background-color: green;
-  padding: 10px;
+  right: 10%;
+  margin-top: 20px;
+  background-color: var(--ter-color);
+  padding: 7px;
+  color: green;
+  border-radius: 5px;
 }
 
 img {
@@ -135,6 +187,11 @@ img {
 
 .info {
   display: flex;
+  justify-content: space-between;
+}
+
+.coeurResto {
+  font-size: 30px;
 }
 
 footer {
@@ -146,6 +203,7 @@ footer {
 
 footer h2 {
   margin: 10px;
+  font-family: 'Shrikhand';
 }
 
 footer nav a {
