--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ footer nav {
 }
 
 .imgMenu {
-  height: 50%;
+  max-height: 320px;
   width: 100%;
   object-fit: cover;
 }
@@ -321,14 +321,38 @@ footer nav {
   display: flex;
   justify-content: space-between;
   margin: 10px;
-  padding: 15px;
   background-color: white;
   border-radius: 20px;
   box-shadow: var(--box-shadow);
 }
 
+.infoPlat {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
 
+.prixAnim {
+  display: flex;
+  overflow: hidden;
+  height: 100%;
+}
 
+.prixAnim span {
+  align-self: flex-end;
+}
+
+.prixAnim i {
+  position: relative;
+  align-self: flex-end;
+  right: 0px;
+  font-size: 30px;
+  color: white;
+  background-color: var(--ter-color);
+  height: 50px;
+  min-width: 60px;
+  border-radius: 0 20px 20px 0px;
+}
 
 
 /*# sourceMappingURL=style.css.map */
