--- a/style.css
+++ b/style.css
@@ -21,10 +21,77 @@ body {
 
 /* Header */
 
+.loadingBall {
+  width: 100%;
+  position: fixed;
+  height: 100vh;
+  text-align: center;
+  background-color: white;
+  animation: loadingAnim 5s;
+  z-index: 20;
+  animation-fill-mode: forwards;
+}
+.loadingBall div {
+  margin-top: 50%;
+  width: 30px;
+  height: 30px; 
+  display: inline-block;
+  border-radius: 50%;
+  background-color: var(--prim-color);
+  animation: loading 3s ease-in-out;
+  animation-fill-mode: both;
+}
+
+.loadingBall .bounce2 {
+  animation-delay: 0.5s;
+  background-color: var(--second-color);
+}
+
+.loadingBall .bounce3 {
+  animation-delay: 1s;
+  background-color: var(--ter-color);
+}
+
+@keyframes loadingAnim {
+  0%{
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 1;
+
+  }
+
+  100% {
+    opacity: 0;
+    z-index: -1;
+  }
+}
+
+@keyframes loading {
+  0% {
+    transform: scale(0);
+  }
+
+  25% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(0);
+  }
+
+  75% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(0);
+  }
+}
+
 header {
   box-shadow: var(--box-shadow);
-  position: relative;
-  z-index: 1;
 }
 
 .logo {
@@ -48,7 +115,6 @@ header {
   justify-content: space-around;
   height: 60px;
   background-color: #e6e3e3;
-  position: relative;
 }
 
 .zone i {
@@ -102,6 +168,11 @@ header {
   border: none;
   color: white;
   min-width: 250px;
+}
+
+.accrocheText button:hover {
+  background: linear-gradient(#fd90de,#9e69df); /* lighten avec sass*/
+  box-shadow: var(--box-shadow);
 }
 
 /* Fonctionnement */
@@ -311,6 +382,11 @@ footer nav {
   min-width: 250px;
 }
 
+.menu button:hover {
+  background: linear-gradient(#fd90de,#9e69df); /* lighten avec sass*/
+  box-shadow: var(--box-shadow);
+}
+
 /* Entrées, plats et desserts*/
 
 .entrees > h3, .plats > h3, .desserts > h3 {
@@ -335,6 +411,11 @@ footer nav {
   margin-top: 20px;
 }
 
+.entrees, .plats, .desserts {
+  animation: fadein 2s ease-in-out;
+  animation-fill-mode: backwards;
+}
+
 .bloc {
   display: flex;
   justify-content: space-between;
@@ -343,8 +424,6 @@ footer nav {
   border-radius: 20px;
   box-shadow: var(--box-shadow);
   overflow: hidden;
-  animation: fadein 2s ease-in-out;
-  animation-fill-mode: backwards;
 }
 
 .bloc1 {
@@ -352,16 +431,23 @@ footer nav {
 }
 
 .bloc2 {
-  animation-delay: 0.28s;
+  animation-delay: 0.66s;
 }
 
 .bloc3 {
-  animation-delay: 0.56s;
+  animation-delay: 1.32s;
 }
 
 @keyframes fadein {
-    0% { opacity: 0; transform: translate(0, 10px); }
-    100% { opacity: 1; transform: translate(0, 0);}
+    0% {
+      opacity: 0; 
+      transform: translate(0, 10px); 
+    }
+
+    100% {
+      opacity: 1; 
+      transform: translate(0, 0);
+    }
 }
 
 
