--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   --prim-color: #9356DC;
   --second-color: #FF79DA;
   --ter-color: #99E2D0;
-  --box-shadow: 0px 0px 5px 1px rgba(209, 209, 209, 0.5);
+  --box-shadow: 2px 2px 10px 0px rgba(167, 166, 166, 0.699);
 }
 
 * {
@@ -13,6 +13,7 @@
 a {
   color: black;
   text-decoration: none;
+  cursor: pointer;
 }
 
 body {
@@ -185,23 +186,17 @@ header {
 
 .blocFonc {
   display: flex;
-  border-radius: 15px;
-  padding: 20px;
-  padding-bottom: 15px;
+  border-radius: 20px;
+  padding: 25px;
   margin: 35px;
-  width: 90%;
+  width: 85%;
   border: none;
   box-shadow: var(--box-shadow);
 }
 
-.blocFonc h3 {
-  width: 100%;
-  text-align: center;
-}
-
 .blocFonc p {
   position: relative;
-  left: -30px;
+  left: -35px;
   width: 17px;
   padding: 5px;
   color: white;
@@ -212,6 +207,11 @@ header {
 .blocFonc i {
   margin-right: 30px;
   font-size: 20px;
+  color: grey;
+}
+
+.blocFonc:hover i {
+  color: var(--prim-color);
 }
 
 /* Restaurants */
@@ -240,12 +240,12 @@ header {
   color: var(--prim-color);
 }
 
-.restaurants {
+#restaurants {
   background-color: rgb(243, 241, 241);
   padding-bottom: 50px;
 }
 
-.restaurants h2 {
+#restaurants h2 {
   margin: 20px;
   margin-bottom: 0; /* améliorer les margin avec une valeur*/
   padding-top: 50px;
@@ -289,6 +289,10 @@ header {
 .info {
   display: flex;
   justify-content: space-between;
+}
+
+.infoResto {
+  width: 100%;
 }
 
 /* Footer */
