--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ header {
   background-color: rgb(243, 241, 241);
 }
 
-.accrocheText h1, .accrocheText p, .accrocheText button {
+.accrocheText h1, .accrocheText p {
   margin: 20px;
 }
 
@@ -160,19 +160,19 @@ header {
   font-size: 30px;
 }
 
-.accrocheText button {
+.accrocheText div {
   background: linear-gradient(var(--second-color), var(--prim-color));
   border-radius: 50px;
   font-size: 18px;
   font-weight: 600;
   padding: 15px;
+  margin: auto;
   width: 50%;
   border: none;
   color: white;
-  min-width: 250px;
 }
 
-.accrocheText button:hover {
+.accrocheText div:hover {
   background: linear-gradient(#fd90de,#9e69df); /* lighten avec sass*/
   box-shadow: var(--box-shadow);
 }
@@ -186,18 +186,21 @@ header {
 
 .blocFonc {
   display: flex;
+  position: relative;
   border-radius: 20px;
-  padding: 25px;
-  margin: 35px;
-  width: 85%;
+  padding: 30px;
+  margin: auto;
+  margin-bottom: 30px;
+  width: 75%;
   border: none;
   box-shadow: var(--box-shadow);
 }
 
 .blocFonc p {
-  position: relative;
-  left: -35px;
-  width: 17px;
+  position: absolute;
+  text-align: center;
+  left: -15px;
+  width: 18px;
   padding: 5px;
   color: white;
   border-radius: 50px;
@@ -205,7 +208,7 @@ header {
 }
 
 .blocFonc i {
-  margin-right: 30px;
+  margin: 0 20px;
   font-size: 20px;
   color: grey;
 }
